force-app/main/default/objects/BLN_ProductRestrictionRules__mdt/BLN_ProductRestrictionRules__mdt.object-meta.xml
<CustomObject>
    <description>FOUK-5034</description>
    <label>Product Restriction Rules</label>
    <pluralLabel>Product RestrictionRules</pluralLabel>
</CustomObject>