force-app/main/default/objects/BLN_ProductRestrictionRules__mdt/fields/BLN_HoleType__c.field-meta.xml
<CustomField>
    <fullName>BLN_HoleType__c</fullName>
    <label>Hole Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>