force-app/main/default/objects/BLN_ProductRestrictionRules__mdt/fields/BLN_Name__c.field-meta.xml
<CustomField>
    <fullName>BLN_Name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>