force-app/main/default/objects/BLN_ProductRestrictionRules__mdt/fields/BLN_RuleType__c.field-meta.xml
<CustomField>
    <fullName>BLN_RuleType__c</fullName>
    <label>Rule Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Glass Area</fullName>
                <default>true</default>
                <label>Glass Area</label>
            </value>
            <value>
                <fullName>Same Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>