force-app/main/default/objects/BLN_ProductRestrictionRules__mdt/fields/BLN_VehicleType__c.field-meta.xml
<CustomField>
    <fullName>BLN_VehicleType__c</fullName>
    <label>Vehicle Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>